fix header image cropping on the bottom

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 .container {
   display: grid;
   /*grid-template-columns: 460px;*/
-  grid-template-rows: 300px 75px 600px 300px;
+  grid-template-rows: 330px 75px 600px 300px;
   border: 1px solid yellow;
 
   grid-template-areas:
@@ -51,7 +51,10 @@ body {
   grid-area: hd;
   background-image: url('/images/coffee.png');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
+  border: 1px solid blue;
+
+
 
 }
 
